    Updated: Installer for use of Roundcube version 1.3.1 (iMSCP::Packages::Webmail::Roundcube::Installer)

PLUGINS
    Added: Own event manager for plugin manager
    Enhancement: Make plugins able to trigger flush of cache (OPcache, userland cache (full or by ID)
    Fixed: Covers case of plugins that are uninstallable but not installable
    Fixed: Undefined offset -- Couldn't infer `Standard` plugin type
    Review: Avoid useless SQL query for plugin `run` action if there are no error (backend)
    Updated: Plugin API to version 1.5.1

PRESEEDING
    Enhancement: Make use of default alternatives when there is no value set for them

SCRIPTS
    Fixed: Avoid localization of `$@' variable (all scripts)
    Fixed: imscp-backup-all: Unexpected warning
    Fixed: Missing `--skip-distro-packages' (imscp-reconfigure)
    Fixed: maillogconvert.pl script is broken leading to un-processing of SMTP logs

SERVERS
    Added: SYSTEMD.CRON(7) cron server implementation as alternative to the historical Vixie CRON(8) daemon 
    Enhancement: Make use of in memory tmpfs to build Web folders whenever possible (iMSCP::Servers::Httpd::Apache2::Abstract)
    Fixed: Applications such as WHMCS behave unexpectedly with strict SQL mode -- Set SQL mode as with MySQL 5.5 (no SQL mode)
    Fixed: Avoid truncating ProFTPD and VsFTPD traffic log files -- Make use of LOGROTATE(8) instead
    Fixed: Bad `X_FORWARDED_PORT` header value for SSL redirect (proxy) vhosts (Apache2)
    Fixed: Bad `X_FORWARDED_PROTO` header value for SSL redirect (proxy) vhosts (Apache2)
    Fixed: Don't enforce SSL strict SNI (Apache2)
    Fixed: Make use of the INADDR_ANY address, regadless of domain IP address when primary server IP is set with `None` option (Httpd)
    Fixed: Set timeout to 5 seconds for LWP::Simple; Default value is far too hight (iMSCP::Servers::Server::local::installer)